[project]
name = "orchestration-toolkit"
version = "0.1.0"
description = "Prompt handling and workflow state control nodes for ComfyUI."
authors = [
    { name = "Flows & Frames" }
]
requires-python = ">=3.10"

[tool.comfy]
PublisherId = "flows-and-frames"
DisplayName = "ComfyUI Orchestration Toolkit"
Icon = ""
