[project]
name = "orchestration-toolkit"
version = "0.1.3"
description = "Prompt handling and workflow state control nodes for ComfyUI."
authors = [
    { name = "Flows & Frames" }
]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/flows-and-frames/ComfyUI-Orchestration-Toolkit"

[tool.comfy]
PublisherId = "flows-and-frames"
DisplayName = "ComfyUI Orchestration Toolkit"
